Add JePL file structure

--- a/.sqa/config.yml
+++ b/.sqa/config.yml
@@ -15,44 +15,44 @@ sqa_criteria:
     repos:
       bitbucket.org/nschaeff/xshells git:
         commands:
-        - /usr/bin/env sh .sqa/script.frumpy-pink-centipede.sh
-        container: qc.acc_jumpy-amber-jaguar
+        - /usr/bin/env sh .sqa/script.snappy-white-newfoundland.sh
+        container: qc.acc_paltry-burgundy-wolverine
   QC.Doc:
     repos:
       bitbucket.org/nschaeff/xshells find_doc_files.py:
         commands:
-        - /usr/bin/env sh .sqa/script.stealthy-flax-wombat.sh
-        container: qc.doc_crappy-xanthic-dalmatian
+        - /usr/bin/env sh .sqa/script.cranky-white-chicken.sh
+        container: qc.doc_wiggy-tan-ibis
       bitbucket.org/nschaeff/xshells git:
         commands:
-        - /usr/bin/env sh .sqa/script.hazy-corn-terrier.sh
-        container: qc.doc_greasy-chocolate-foxhound
+        - /usr/bin/env sh .sqa/script.cloudy-amaranth-flamingo.sh
+        container: qc.doc_cheeky-violet-lynx
       bitbucket.org/nschaeff/xshells markdownlint:
         commands:
-        - /usr/bin/env sh .sqa/script.snippy-linen-dhole.sh
-        container: qc.doc_sleepy-silver-orangutan
+        - /usr/bin/env sh .sqa/script.geeky-blue-rottweiler.sh
+        container: qc.doc_greasy-burgundy-gerbil
   QC.Lic:
     repos:
       bitbucket.org/nschaeff/xshells licensee:
         commands:
-        - /usr/bin/env sh .sqa/script.stinky-azure-lemur.sh
-        container: qc.lic_skimpy-ecru-jackal
+        - /usr/bin/env sh .sqa/script.gummy-burgundy-blue.sh
+        container: qc.lic_lousy-persimmon-hyrax
   QC.Sec:
     repos:
       bitbucket.org/nschaeff/xshells bandit:
         commands:
-        - /usr/bin/env sh .sqa/script.cloudy-tan-tarsier.sh
-        container: qc.sec_shaky-fuchsia-lynx
+        - /usr/bin/env sh .sqa/script.chummy-zucchini-moose.sh
+        container: qc.sec_snippy-firebrick-jaguar
   QC.Sty:
     repos:
       bitbucket.org/nschaeff/xshells flake8:
         commands:
-        - /usr/bin/env sh .sqa/script.muggy-cyan-duck.sh
-        container: qc.sty_pasty-crimson-okapi
+        - /usr/bin/env sh .sqa/script.blurry-tomato-seal.sh
+        container: qc.sty_lanky-ultramarine-eel
   QC.Ver:
     repos:
       bitbucket.org/nschaeff/xshells get_git_tags.py:
         commands:
-        - /usr/bin/env sh .sqa/script.chewy-chocolate-zonkey.sh
-        container: qc.ver_sickly-cinnabar-moorhen
+        - /usr/bin/env sh .sqa/script.slaphappy-black-fossa.sh
+        container: qc.ver_ready-black-seal
 timeout: 5400
