--- a/.sqa/config.yml
+++ b/.sqa/config.yml
@@ -15,28 +15,28 @@ sqa_criteria:
     repos:
       gitlab.inf.unibz.it/earth_observation_public/raster-to-stac git:
         commands:
-        - /usr/bin/env sh .sqa/script.bluesy-crimson-fox.sh
-        container: qc.acc_gummy-myrtle-dhole
+        - /usr/bin/env sh .sqa/script.sleazy-green-buffalo.sh
+        container: qc.acc_snazzy-cinnabar-cuttlefish
   QC.Doc:
     repos:
       gitlab.inf.unibz.it/earth_observation_public/raster-to-stac find_doc_files.py:
         commands:
-        - /usr/bin/env sh .sqa/script.flaky-cobalt-paradise.sh
-        container: qc.doc_skimpy-saffron-chinook
+        - /usr/bin/env sh .sqa/script.cozy-tangerine-gopher.sh
+        container: qc.doc_tacky-plum-wrasse
       gitlab.inf.unibz.it/earth_observation_public/raster-to-stac git:
         commands:
-        - /usr/bin/env sh .sqa/script.leaky-bronze-tang.sh
-        container: qc.doc_leaky-cerise-buffalo
+        - /usr/bin/env sh .sqa/script.flaky-beige-bombay.sh
+        container: qc.doc_lanky-bronze-numbat
   QC.Lic:
     repos:
       gitlab.inf.unibz.it/earth_observation_public/raster-to-stac licensee:
         commands:
-        - /usr/bin/env sh .sqa/script.flimsy-silver-coati.sh
-        container: qc.lic_droopy-vermilion-kangaroo
+        - /usr/bin/env sh .sqa/script.cranky-eggplant-beaver.sh
+        container: qc.lic_snoopy-crimson-bandicoot
   QC.Ver:
     repos:
       gitlab.inf.unibz.it/earth_observation_public/raster-to-stac get_git_tags.py:
         commands:
-        - /usr/bin/env sh .sqa/script.lumpy-sangria-drever.sh
-        container: qc.ver_muzzy-cinnabar-robin
+        - /usr/bin/env sh .sqa/script.snippy-magenta-coati.sh
+        container: qc.ver_dorky-orange-barracuda
 timeout: 5400
